--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./style/output.css" />
   <script src="https://kit.fontawesome.com/e650b26129.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style/home.css" />
+  <link rel="stylesheet" href="./style/f" />
   <script src="https://cdn.tailwindcss.com"></script>
 
 
@@ -66,7 +67,7 @@
   <div class="bg-gradient-to-tr from-gray-700 via-gray-900 to-black">
     <nav>
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-5">
-        <h2 class="text-4xl font-extrabold dark:text-white">SHAIDS</h2>
+        <h2 class="text-4xl font-bold dark:text-white">SHAIDS</h2>
         <!-- Mobile navbar -->
         <button data-collapse-toggle="navbar-dropdown" type="button"
           class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -276,7 +277,7 @@
         </h1>
         <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-3 xl:grid-cols-4 md:px-0 lg:px-28">
           <div
-            class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+            class="flex flex-col items-center p-8 transition duration-300 transform border border-white dark:border-gray-600 cursor-pointer rounded-xl group hover:bg-opacity-25 hover:backdrop-blur-2xl hover:bg-white dark:hover:bg-gray-800 dark:hover:bg-opacity-35 dark:hover:backdrop-blur-2xl hover:shadow-md dark:hover:shadow-md-glow">
             <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/sai.jpg"
               alt="" />
             <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
@@ -309,8 +310,8 @@
           </div>
 
           <div
-            class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
-            <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/vedant.jpg"
+          class="flex flex-col items-center p-8 transition duration-300 transform border border-white dark:border-gray-600 cursor-pointer rounded-xl group hover:bg-opacity-25 hover:backdrop-blur-2xl hover:bg-white dark:hover:bg-gray-800 dark:hover:bg-opacity-35 dark:hover:backdrop-blur-2xl hover:shadow-md dark:hover:shadow-md-glow">
+          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/vedant.jpg"
               alt="" />
 
             <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
@@ -347,8 +348,8 @@
           </div>
 
           <div
-            class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
-            <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/ajink.jpg"
+          class="flex flex-col items-center p-8 transition duration-300 transform border border-white dark:border-gray-600 cursor-pointer rounded-xl group hover:bg-opacity-25 hover:backdrop-blur-2xl hover:bg-white dark:hover:bg-gray-800 dark:hover:bg-opacity-35 dark:hover:backdrop-blur-2xl hover:shadow-md dark:hover:shadow-md-glow">
+          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/ajink.jpg"
               alt="" />
             <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
               Ajink Gupta
@@ -380,8 +381,8 @@
             </div>
           </div>
           <div
-            class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
-            <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/harsh.jpg"
+          class="flex flex-col items-center p-8 transition duration-300 transform border border-white dark:border-gray-600 cursor-pointer rounded-xl group hover:bg-opacity-25 hover:backdrop-blur-2xl hover:bg-white dark:hover:bg-gray-800 dark:hover:bg-opacity-35 dark:hover:backdrop-blur-2xl hover:shadow-md dark:hover:shadow-md-glow">
+          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/harsh.jpg"
               alt="" />
 
             <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
@@ -904,7 +905,7 @@
           </div>
           <div class="text-center md:border-r">
             <h6 class="text-4xl font-bold lg:text-5xl text-white xl:text-6xl">
-              <span id="events">0</span>
+              <span id="events">10</span>+
             </h6>
             <p class="text-sm font-medium tracking-widest text-gray-200 uppercase lg:text-base">
               Events
@@ -912,7 +913,7 @@
           </div>
           <div class="text-center md:border-r">
             <h6 class="text-4xl font-bold lg:text-5xl text-white xl:text-6xl">
-              <span id="mentors">0</span>
+              <span id="mentors">8</span>+
             </h6>
             <p class="text-sm font-medium tracking-widest text-gray-200 uppercase lg:text-base">
               Mentors
@@ -920,7 +921,7 @@
           </div>
           <div class="text-center">
             <h6 class="text-4xl font-bold lg:text-5xl text-white xl:text-6xl">
-              <span id="opportunities">0</span>
+              <span id="opportunities">20</span>+
             </h6>
             <p class="text-sm font-medium tracking-widest text-gray-200 uppercase lg:text-base">
               Opportunity Provided
@@ -1095,4 +1096,5 @@
     });
   </script>
 </body>
+
 </html>
