--- a/about.html
+++ b/about.html
@@ -37,9 +37,10 @@
       cursor.style.top = event.clientY + 'px';
     });
   </script>
+  <div class="bg-gradient-to-tr from-gray-700 via-gray-900 to-black">
 
   <!-- Navbar start -->
-  <nav class="bg-blue-900 text-white dark:bg-gray-900 dark:text-gray-400 border-gray-200 dark:border-gray-700">
+  <nav >
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
       <!-- <a href="#" class="flex items-center"> --><a href="./index.html">
@@ -91,9 +92,9 @@
   <!-- Navbar end -->
 
   <!-- About Us -->
-  <section class="container-about mx-auto px-4 py-6 md:py-24 bg-gray-900 text-white">
+  <section >
     <div class="flex  items-center justify-between">
-      <div class="mx-72 my-10">
+      <div class="mx-4 md:mx-72 my-4 md:my-10">
         <h2 class="text-4xl font-bold text-gray-100 mb-4">About SHAIDS - Student Hive for Artificial Intelligence and Data Science</h2>
         <p class="text-lg text-gray-300 leading-relaxed">
           Welcome to SHAIDS, the Student Hive for Artificial Intelligence and Data Science, an exciting initiative driven by passionate students. Established in 2023, SHAIDS is dedicated to fostering a vibrant community that explores the fascinating realms of AI and Data Science while embracing the spirit of collaboration.
@@ -102,8 +103,8 @@
         <p class="text-lg text-gray-300 leading-relaxed mt-4">
           At SHAIDS, our goal is to enrich the college experience for students by conducting a diverse range of events encompassing technical, cultural, and sports activities. We aim to provide opportunities for students to enhance their skills, showcase their talents, and engage in a holistic learning journey.
         </p><br/>
-        <h3 class="text-4xl font-bold text-gray-100 mb-4">What we Offer?</h3>
-        <ul>
+        <h3 class="text-4xl font-bold text-white mb-4">What we Offer?</h3>
+        <ul class="text-gray-300">
           <li><b>Technical Excellence: </b>Through a dynamic lineup of workshops, webinars, hackathons, and coding competitions, we empower students with practical skills and insights in AI and Data Science. Our experienced mentors and industry experts guide our members to stay at the forefront of technological advancements.</li><br/>
           <li><b>Cultural Diversity: </b>Beyond technology, SHAIDS celebrates the diverse talents of our student body. Our cultural events, talent shows, and artistic exhibitions create a platform for showcasing creativity and artistic brilliance.</li><br/>
           <li><b>Sports and Fitness: </b>We believe in the holistic development of our members. Our sports team organizes sports events, tournaments, and fitness activities to promote a healthy lifestyle and foster a sense of sportsmanship.</li><br/>
@@ -126,11 +127,14 @@
             Join our community now! </b>
         </button>
       </center>
+  </br>
+  </br>
+  </br>
     </div>
   </section>
 
   <!-- Footer start -->
-  <footer class="bg-white dark:bg-indigo-950">
+  <footer class="bg-black ">
     <div class="container-footer py-12 mx-auto lg:pl-28 lg:pr-28">
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
         <div class="sm:col-span-2">
@@ -213,7 +217,7 @@
 
     </div>
   </footer>
-
+</div>
 
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
     defer></script>
