--- a/about.html
+++ b/about.html
@@ -91,6 +91,12 @@
   </nav>
   <!-- Navbar end -->
 
+
+
+
+
+
+
   <!-- About Us -->
   <section >
     <div class="flex  items-center justify-between">
@@ -131,6 +137,9 @@
   </br>
   </br>
     </div>
+
+  </div>
+</div>
   </section>
 
   <!-- Footer start -->
@@ -214,7 +223,7 @@
           </a>
         </div>
       </div>
-
+    </div>
     </div>
   </footer>
 </div>
